name:                homplexity
version:             0.4.4.3
synopsis:            Haskell code quality tool
description:         Homplexity aims to measure code complexity,
                     warning about fragments that might have higher defect probability
                     due to bad coding style on-the-large:
                     .
                       * too large functions
                     .
                       * too deeply nested conditions
                     .
                       * too few comments

-- homepage:            https://github.com/mgajda/homplexity
license:             BSD3
license-file:        LICENSE
author:              Michal J. Gajda
maintainer:          mjgajda@gmail.com
copyright:           Copyright by Michal J. Gajda '2015-'2018
category:            Language, Tools
build-type:          Simple
extra-source-files:  README.md changelog.md
cabal-version:       >=1.10
bug-reports:         https://github.com/mgajda/homplexity/issues
tested-with:         GHC==7.8.4
                   , GHC==7.10.3
                   , GHC==8.0.2
                   , GHC==8.2.2
                   , GHC==8.4.4
                   , GHC==8.6.2

source-repository head
  type:     git
  location: https://github.com/mgajda/homplexity.git

Library
  exposed-modules:
    Language.Haskell.Homplexity.Assessment
    Language.Haskell.Homplexity.CabalFiles
    Language.Haskell.Homplexity.CodeFragment
    Language.Haskell.Homplexity.Comments
    Language.Haskell.Homplexity.Cyclomatic
    Language.Haskell.Homplexity.Message
    Language.Haskell.Homplexity.Metric
    Language.Haskell.Homplexity.Parse
    Language.Haskell.Homplexity.SrcSlice
    Language.Haskell.Homplexity.TypeComplexity
    Language.Haskell.Homplexity.Utilities
  Hs-source-dirs:      lib
  build-tools:         happy            >= 1.19.0
  Other-Modules:
    Paths_homplexity
  autogen-modules:
    Paths_homplexity
  build-depends:       base             >=4.5  && <4.14,
                       bytestring,
                       containers       >=0.3  && <0.7,
                       cpphs            >=1.5  && <1.21,
                       deepseq          >=1.3  && <1.7,
                       directory        >=1.1  && <1.4,
                       filepath         >=1.2  && <1.5,
                       haskell-src-exts >=1.18 && <1.22,
                       hflags           >=0.3  && <0.5,
                       template-haskell >=2.6  && <2.16,
                       uniplate         >=1.4  && <1.7
  if impl(ghc>=8.8.1)
    build-depends:     Cabal            ==3.0.0.0
  else
    build-depends:     Cabal            ==2.4.0.1
  other-extensions:    FlexibleContexts,
                       FlexibleInstances,
                       UndecidableInstances,
                       OverlappingInstances,
                       IncoherentInstances,
                       TypeSynonymInstances,
                       DeriveDataTypeable,
                       MultiParamTypeClasses,
                       RecordWildCards,
                       StandaloneDeriving,
                       ScopedTypeVariables,
                       TemplateHaskell,
                       BangPatterns,
                       GeneralizedNewtypeDeriving,
                       TypeFamilies
  default-language:    Haskell2010

executable homplexity-cli
  main-is:             Homplexity.hs
  hs-source-dirs:      app/
  Other-Modules:
    Paths_homplexity
  autogen-modules:
    Paths_homplexity
  build-depends:       base             >=4.5  && <4.14,
                       haskell-src-exts >=1.18 && <1.22,
                       directory        >=1.1  && <1.4,
                       filepath         >=1.2  && <1.5,
                       hflags           >=0.3  && <0.5,
                       uniplate         >=1.4  && <1.7,
                       deepseq          >=1.3  && <1.7,
                       containers       >=0.3  && <0.7,
                       template-haskell >=2.6  && <2.16,
                       cpphs            >=1.5  && <1.21,
                       homplexity
  default-language:    Haskell2010
  -- STATIC: ld-options: -static
  -- STATIC: ghc-options: -fPIC


test-suite homplexity-tests
  main-is:             Tests.hs
  hs-source-dirs:      tests
  other-modules:
    Test.Parse.CommentsSpec
    Test.Parse.ExtensionsSpec
  type:                exitcode-stdio-1.0
  build-depends:       base             >=4.5  && <4.14,
                       homplexity,
                       filepath         >=1.2  && <1.5,
                       haskell-src-exts >=1.18 && <1.22,
                       hspec            ==2.7.1
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N"

